--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@remix-run/react": "^1.3.1",
     "@remix-run/serve": "^1.3.1",
     "concurrently": "^7.0.0",
