--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.3.1",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "web-push": "^3.4.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.3.1",
