--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^1.0.6",
     "@remix-run/react": "^1.3.1",
     "@remix-run/serve": "^1.3.1",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^7.0.0",
     "mongoose": "^6.2.7",
     "react": "^17.0.2",
