--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "start": "remix-serve build"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "@remix-run/react": "^1.3.1",
-    "@remix-run/serve": "^1.3.1",
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^7.0.0",
-    "mongoose": "^6.2.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remix": "^1.3.1",
-    "tailwindcss": "^3.0.23"
+    "@heroicons/react": "~1.0.6",
+    "@remix-run/react": "~1.4.3",
+    "@remix-run/serve": "~1.4.3",
+    "bcryptjs": "~2.4.3",
+    "concurrently": "~7.0.0",
+    "mongoose": "~6.2.7",
+    "react": "~17.0.2",
+    "react-dom": "~17.0.2",
+    "remix": "~1.4.3",
+    "tailwindcss": "~3.0.23"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.3.1",
-    "@remix-run/eslint-config": "^1.3.1",
-    "eslint": "^8.11.0"
+    "@remix-run/dev": "~1.4.3",
+    "@remix-run/eslint-config": "~1.4.3",
+    "eslint": "~8.11.0"
   },
   "engines": {
     "node": ">=14"
