--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build:css": "tailwindcss -o ./app/tailwind.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
-    "postinstall": "remix setup node",
     "start": "remix-serve build"
   },
   "dependencies": {
     "@heroicons/react": "~1.0.6",
+    "@remix-run/node": "~1.4.3",
     "@remix-run/react": "~1.4.3",
     "@remix-run/serve": "~1.4.3",
     "bcryptjs": "~2.4.3",
@@ -21,7 +21,6 @@
     "mongoose": "~6.2.7",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
-    "remix": "~1.4.3",
     "tailwindcss": "~3.0.23"
   },
   "devDependencies": {
