--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,18 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
-    }
+    },
+    "forceConsistentCasingInFileNames": true,
+    "target": "es2019",
+    "lib": ["DOM", "DOM.Iterable", "ES2019"],
+    "allowJs": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "noEmit": true
   },
-  "exclude": ["./cache", "./build", "./public/build"]
+  "exclude": ["./cache", "./build", "./public/build"],
+  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"]
 }
