--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   },
   "dependencies": {
     "@heroicons/react": "~1.0.6",
-    "@remix-run/node": "~1.4.3",
+    "@remix-run/node": "^1.6.0",
     "@remix-run/react": "~1.4.3",
-    "@remix-run/serve": "~1.4.3",
+    "@remix-run/serve": "^1.6.0",
     "bcryptjs": "~2.4.3",
     "concurrently": "~7.0.0",
     "mongoose": "~6.2.7",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
+    "remix": "^1.6.0",
     "tailwindcss": "~3.0.23"
   },
   "devDependencies": {
